--- a/src/customnodes/Input/Input.scss
+++ b/src/customnodes/Input/Input.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  background-color: #0E172D;
+  background-color: #0e172d;
   border-radius: 10px;
   color: white;
   height: 40px;
