--- a/src/customnodes/Output/Output.scss
+++ b/src/customnodes/Output/Output.scss
@@ -1,12 +1,11 @@
 .output {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    background-color: #0E172D;
-    border-radius: 10px;
-    color: white;
-    height: 40px;
-    width: 140px;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  background-color: #0e172d;
+  border-radius: 10px;
+  color: white;
+  height: 40px;
+  width: 140px;
+}
