--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,4 +1,5 @@
 @use "../../styles/partials/responsive" as *;
+@use "../../styles/partials/_colors" as *;
 
 .sidebar {
   height: 100vh;
@@ -7,28 +8,29 @@
   right: 0;
   color: white;
   z-index: 4;
+  width: 100%;
 
   @include media-tablet {
     width: 60%;
   }
 
   @include media-desktop {
-    width: 40%;
-    width: 450px;
+    width: 45rem;
   }
 
   &__content {
-    width: 70%;
+    width: 100%;
     height: 100vh;
-    padding: 4rem;
-    background-color: #0e172d;
+    padding: 2rem;
+    background-color: $primary-color;
     right: 0;
 
     @include media-tablet {
-      width: 60%;
+      width: 100%;
     }
 
     @include media-desktop {
+      padding: 4rem;
       width: 100%;
     }
   }
@@ -42,17 +44,86 @@
   &__title {
     font-weight: 500;
     font-size: 1.5rem;
-    letter-spacing: 0.08rem;
     text-transform: uppercase;
+
+    @include media-desktop {
+      font-size: 2rem;
+    }
+  }
+
+  &__sub-title {
+    font-weight: 500;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+
+    @include media-desktop {
+      font-size: 2rem;
+    }
   }
 
   &__close-button {
     border: 0;
     border-radius: 5px;
-    padding: 0.6rem 1rem;
+    padding: 0.4rem 0.8rem;
+
+    @include media-desktop {
+      padding: 0.6rem 1rem;
+    }
   }
 
   &__node-info {
     margin-top: 4rem;
+  }
+
+  &__node-basic {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin-bottom: 4rem;
+    padding-inline-start: 0;
+
+    li {
+      display: flex;
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__info-title {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    width: 12rem;
+    border: 0.5px solid #4f7cd6;
+    border-radius: 5px;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  &__info-data {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    min-width: 4.2rem;
+    border: 0.5px solid #4f7cd6;
+    border-radius: 5px;
+    margin-left: 1rem;
+
+    &--conv {
+      border-left: 15px solid $conv-color;
+    }
+
+    &--pool {
+      border-left: 15px solid $pool-color;
+    }
+
+    &--fc {
+      border-left: 15px solid $fc-color;
+    }
+
+    &--inputoutput {
+      border-left: 15px solid white;
+    }
   }
 }
